--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -16,6 +16,6 @@
     justify-content: space-between !important;
 }
 
-.bgGray {
+.bgBlue {
     background-color: rgba(0, 0, 0, 0.2) !important;
 }
